redo an operation

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "quizapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Quiz App server.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Daniel",
   "license": "MIT",
